fixtures/errors/regex_invalid.js
// Test invalid regex syntax
var r = /(/;
console.log(r);
